# DictDash

./: DictDash.cabal  input.txt
app/: Main.hs
src/: DictDash.hs
test/: Spec.hs
