name:                DictDash
version:             0.1.0.0
synopsis:            A little test project for Improbable
description:         Please see README.md
homepage:            https://github.com/h22roscoe/DictDash#readme
license:             BSD3
license-file:        LICENSE
author:              Harry
copyright:           2016 Harry
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DictDash
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable DictDash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DictDash
  default-language:    Haskell2010

test-suite DictDash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DictDash
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/h22roscoe/DictDash
